2004-07-12  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el
	(make-double-command): use (declare) in macro
	(my-home): new command, bound to C-Home
	(my-end): new command, bound to C-End
	(emacs-lisp-mode-map): bind C-c C-c to emacs-lisp-byte-compile

	* perso/patches.el
	(yank-rpop): go forward in kill ring for yanking (bound to M-Y)

	* perso/mycode.el
	(camille-c-style): change arg list continuation
	(c++-new-font-lock-keywords): better description

	* perso/h4x0r.el
	(h4x0r-sometimes-replace): new way of writing r

	* dotemacs.el:
	(hi-lock-mode): disabled
	(global-visible-mark-mode): disable
	(htmlize-many-files-dired): add autoload

	* dotemacs-cust.el
	(custom-set-variables): prevent eshell to cycle completions

2004-07-02  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el:
	activate every disabled command

	* perso/margin.el
	initial checkin

2004-06-30  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotgnus.el
	(fortune-program): set to /usr/games/fortune

	* perso/patches.el
	(erase-buffer): re-enabled command

2004-06-23  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/dabbrev-hover.el:
	initial checkin

2004-06-21  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el
	(request): 'saveplace has to be explicitely loaded
	(c-mode-common-hook): fixed some bug when using conflict resolution on c++

	* dotemacs-cust.el
	(custom): set limit to 100 saved places

	* dotemacs.el
	(request): load saveplace

	* perso/undo-browse.el:
	initial checkin

2004-06-20  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/mycode.el:
	useless code suppression

	* perso/visible-mark-mode.el
	(visible-mark-move-overlay): fixed function when visible-mark-overlay is null

	* dotemacs.el
	(find-file-guessing): new function to wrap find-file
	(kbd): use find-file-guessing with C-x C-f, suppress H-x H-f
	(ediff-keymap-setup-hook): solved conflict in keybindings

	* emacs.d/emacs-d-vars.el:
	initial checkin

	* emacs.d/emacs-d-classes.el:
	initial checkin

	* dotemacs-cust.el: